<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="270dp"
        android:layout_height="142dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_o1" />

            <Button
                android:id="@+id/btn_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_02" />

            <Button
                android:id="@+id/btn_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_03" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_04" />

            <Button
                android:id="@+id/btn_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_05" />

            <Button
                android:id="@+id/btn_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_06" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_07" />

            <Button
                android:id="@+id/btn_08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_07" />

            <Button
                android:id="@+id/btn_09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_09" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/txtplayer1"
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/txtplayer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtplayer2"
        android:layout_width="108dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtplayer2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtView_info"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
</android.support.constraint.ConstraintLayout>